1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* control.m: Include stdlib.h for free.
	(tkobjc_configureHideBitmap): Use the `hide' bitmap.
	(tkobjc_configureHideButton): Use the `special' bitmap.
	(tkobjc_packForgetArmSuperAndResize): Copy the subclass name
	so that tclObjc_objectToName can be used on owner; free it at the end.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-disableDestroyNotification]): Don't try to disable the event
	handler if already disabled; set destroyNotificationTarget to nil
	after disabling so that we know.

1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Frame.m ([Frame -drop]): Don't destroy if already destroyed.

	* BLTGraph.m ([GraphElement -drop]): Don't delete elements in
	the case the graph has been destroyed.
	
	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-getDestroyedFlag]): New method.
	([ArchivedGeometryWidget +createBegin:]): Initialize destroyedFlag
	to NO.
	([ArchivedGeometryWidget -drop]): Don't destroy if already
	destroyed.
	([ArchivedGeometryWidget -_notifyTarget_]): Don't drop (renamed
	method), and pass self as an argument to the notification method.
	(structure_proc): Use renamed _notifyTarget_.
	([ArchivedGeometryWidget
	-enableDestroyNotification:notificationMethod:]): Don't setup
	handler if target is nil.

	* ArchivedGeometryWidget.h (ArchivedGeometryWidget): Add
	destroyedFlag, and getter.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-disableDestroyNotification]):  New method.

	* Frame.m ([Frame -drop]): Call archiverUnregister since we
	aren't calling [super drop].

1998-01-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ArchivedGeometryWidget.m (structure_proc): New function.  A
	handler for Structure changes to the widget (e.g. destruction).
	([ArchivedGeometryWidget -_notifyTargetAndDrop_]): New internal
	method called by above handler.
	([ArchivedGeometryWidget
	-enableDestroyNotification:notificationMethod:]):  Configures